--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-<title>Alfalfa Video Streaming!</title>
 <body>
-<h1>Site under construction</h1><p>
+<h1>Alfalfa Video Streaming!</h1>
+<h2>Site under construction</h2><p>
 
-<!--<a href="youtube-results">YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</a>-->
+<a href="youtube-results">YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</a>
 
 </body>
 
