--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1>Alfalfa Video Streaming!</h1>
 <h2>Site under construction</h2><p>
 
-<a href="youtube-results">YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</a>
+<a href="youtube-analysis">YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</a>
 
 </body>
 
