--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body bgcolor="#c0c0c0">
 <marquee><h1>Alfalfa Video Streaming!</h1></marquee>
 <h2>Site under construction</h2><p>
 
