add dataset links

--- a/youtube-analysis.html
+++ b/youtube-analysis.html
@@ -3,6 +3,7 @@
 <body>
 <h1>YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</h1><p>
 
+<a href="https://www.dropbox.com/sh/hy7gv3ah0mcjvo4/AAD8cVRExtpJ6SCiRs_j48Uqa?dl=0">Download datasets</a>
 <ol>
 
 <li>For each raster shown to the user, take the SSIM (relative to the "original" raster). Report the mean and stddev of these SSIMs.
