hopefully raw=1 works

--- a/youtube-analysis.html
+++ b/youtube-analysis.html
@@ -15,8 +15,8 @@
 <ol>
 
 <li> Among the "resumes," aggregate all the delays together and plot the CDF.
-<img src="https://www.dropbox.com/s/3cigdqx47im18i5/Verizon%20EVDO%20driving%201080p-resume-delays-cdf.svg?dl=0">
-<img src="https://www.dropbox.com/s/3cigdqx47im18i5/Verizon%20LTE%20short%201080p-resume-delays-cdf.svg?dl=0">
+<img src="https://www.dropbox.com/s/3cigdqx47im18i5/Verizon%20EVDO%20driving%201080p-resume-delays-cdf.svg?raw=1">
+<img src="https://www.dropbox.com/s/3cigdqx47im18i5/Verizon%20LTE%20short%201080p-resume-delays-cdf.svg?raw=1">
 
 <li>Plot the CDF of all of the "inter-frame delays." It's okay if most of them are exactly 1/24 second -- hopefully that will be true. But the part of the graph that is &gt; 1/24 second will be the stally part.
 
