--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <h2>Site under construction</h2><p>
 
 <a href="analysis">YouTube results (1080p LTE, 1080p EVDO, 720p LTE, 720p EVDO)</a>
+<a href="youtube_replication">YouTube analysis replication instructions</a>
 
 </body>
 
